# yolo-ultralytics-clearml

./: .gitignore  README.md  ingest.py  main.py  pyproject.toml  requirements.txt  sample.py  split.txt  train.py  yolo.yaml
conf/: config.yaml
runs/detect/train/: args.yaml
runs/detect/train10/: args.yaml
runs/detect/train11/: args.yaml  results.csv
runs/detect/train12/: args.yaml  results.csv
runs/detect/train13/: args.yaml
runs/detect/train2/: args.yaml
runs/detect/train3/: args.yaml
runs/detect/train4/: args.yaml
runs/detect/train5/: args.yaml
runs/detect/train6/: args.yaml
runs/detect/train7/: args.yaml
runs/detect/train8/: args.yaml  results.csv
runs/detect/train9/: args.yaml  results.csv
src/yolo_training/: __init__.py  cvat_parser.py  log.py  preprocess_raw.py  s3_ops.py
