[project]
name = "yolo-training"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "siddhi47", email = "siddhi.47.skb@gmail.com" }
]
requires-python = ">=3.12"
dependencies = []

[project.scripts]
yolo-training = "yolo_training:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
